# openlyrics

./: .gitignore  Makefile.am  configure.ac  openlyrics.pc.in
examples/: oltool.rb
examples/songs/: example_complex.xml
libol-ruby/: Rakefile
libol-ruby/ext/: extconf.rb  openlyrics.c
libol-ruby/lib/: openlyrics.rb
libopenlyrics/: data.c  parse.c  song.c  util.c
libopenlyrics/include/openlyrics/: data.h  parse.h  song.h  util.h
tool/: oltool.c
